Update Vercel build configuration to debug dependency issues

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm list tailwindcss && npm run build",
   "outputDirectory": ".next",
-  "installCommand": "npm install",
+  "installCommand": "npm ci || npm install",
   "framework": "nextjs",
   "regions": ["hnd1"],
   "env": {
