--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^2.4.3",
