Simplify ESLint config to fix build issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,3 @@
 ﻿{
-  "extends": ["next/core-web-vitals"],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/no-explicit-any": "warn", 
-    "react-hooks/exhaustive-deps": "warn",
-    "prefer-const": "warn",
-    "react/no-unescaped-entities": "warn",
-    "@next/next/no-img-element": "warn",
-    "import/no-anonymous-default-export": "warn"
-  }
+  "extends": ["next/core-web-vitals"]
 }
